--- a/matiec/stage4/generate_c/Makefile
+++ b/matiec/stage4/generate_c/Makefile
@@ -252,10 +252,10 @@ STRIP =
 VERSION = 0.1
 YACC = bison -y
 YFLAGS = 
-abs_builddir = /home/thiagoralves/Documents/OpenPLC Editor/matiec/stage4/generate_c
-abs_srcdir = /home/thiagoralves/Documents/OpenPLC Editor/matiec/stage4/generate_c
-abs_top_builddir = /home/thiagoralves/Documents/OpenPLC Editor/matiec
-abs_top_srcdir = /home/thiagoralves/Documents/OpenPLC Editor/matiec
+abs_builddir = /home/jihua/OpenPLC_Editor/matiec/stage4/generate_c
+abs_srcdir = /home/jihua/OpenPLC_Editor/matiec/stage4/generate_c
+abs_top_builddir = /home/jihua/OpenPLC_Editor/matiec
+abs_top_srcdir = /home/jihua/OpenPLC_Editor/matiec
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -275,7 +275,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} '/home/thiagoralves/Documents/OpenPLC Editor/matiec/config/install-sh'
+install_sh = ${SHELL} /home/jihua/OpenPLC_Editor/matiec/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
